--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,23 @@
 <%= render 'shared/content_title', title: "Profile: #{@user.username}" %>
 
-<div class='well'>
-  <dl class='dl-horizontal'>
-    <dt>Username:</dt>
-    <dd><%= @user.username %></dd>
-  </dl>
+<div class='row'>
+  <div class='span8 well'>
+    <div class='row'>
+      <div class='span2'>
+        <%= gravatar_image_tag("#{@user.email}", :alt => "#{@user.username}", :gravatar => { :size => 195 }) %>
+      </div>
+
+      <div class='span6'>
+        <dl class='dl-horizontal'>
+          <dt>Username:</dt>
+          <dd><%= @user.username %></dd>
+          <br>
+          <dt>Github:</dt>
+          <dd><%= link_to @user.github_link %></dd>
+        </dl>
+      </div>
+    </div>
+  </div>
 </div>
 
 <h5><%= @user.username %>'s Activity</h5>
